force-app/main/default/objects/Interview_Feedback__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <formula>(VALUE(TEXT( Business_Accumen__c )) +
VALUE(TEXT( Technical_Acumen__c )) +
VALUE(TEXT( Story_Telling__c )) +
VALUE(TEXT( Decision_Making_Skills_Judgement__c )))/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>