force-app/main/default/objects/Interview_Feedback__c/fields/Hiring_Decision__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Decision__c</fullName>
    <label>Hiring Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>No Hire</fullName>
            </value>
            <value>
                <fullName>Consider for Different Position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>