force-app/main/default/objects/Interview_Feedback__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <inlineHelpText>Please select the interview associated to this feedback.</inlineHelpText>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Interview Feedback</relationshipLabel>
    <relationshipName>Interview_Feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>