force-app/main/default/objects/Interview_Feedback__c/fields/Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Interview Feedback</relationshipLabel>
    <relationshipName>Interview_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>