force-app/main/default/objects/Interview_Feedback__c/fields/Technical_Acumen__c.field-meta.xml
<CustomField>
    <fullName>Technical_Acumen__c</fullName>
    <inlineHelpText>Please select the score (1 = Poor, 5 = Very Good)</inlineHelpText>
    <label>Technical Acumen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>